Security fix of 1.5.1 (#312)