@@ -4,8 +4,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -23,8 +22,8 @@ class GitHubReleaseInfoTest {
     }
 
     @Test
-    void htmlUrl() throws MalformedURLException {
-        final URL url = new URL("http://www.abc");
+    void htmlUrl() throws MalformedURLException, URISyntaxException {
+        final URL url = new URI("http://www.abc").toURL();
         final GitHubReleaseInfo info = GitHubReleaseInfo.builder().htmlUrl(url).build();
         assertThat(info.getHtmlUrl(), equalTo(url));
     }
